# hypergraph

./: .doc-manager.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .worktreeinclude  AGENTS.md  CLAUDE.md  CODE_SMELLS.md  CONTEXT.md  DESIGN_OPENCLAW.md  DEVIATIONS.md  LICENSE  LLMs.txt  LLMs.txt.prompt  README.md  RED_TEAM_FINDINGS.md  pyproject.toml  ralph.sh
.agent-repl/: v2-core-state.json
.beads/: config.yaml  issues.jsonl
.choo-choo-ralph/: fix-edge-dimension-mismatch.spec.md  pour-preview.md
.choo-choo-ralph/archive/: fix-edge-dimension-mismatch.spec.md  fix-viz-comprehensive.spec.md  fix-viz-edge-routing.spec.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  codeql.yml  release.yml  viz-tests.yml
.openclaw/: .env.example  README.md  openclaw.json
.openclaw/scripts/: cron-monitor.sh  setup.sh
.openclaw/workspace/: MEMORY.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/intel/: conventions.json  graph.db  index.json  summary.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  CODE-SMELLS.md  PITFALLS.md  STACK.md  SUMMARY.md
.ruler/: arjan_codes.md  code_smells.md  code_structure.md  design_principles.md  instructions.md  ruler.toml
.sp/: build-plan-map-iter-streaming.md  handoff-derived-table-hypergraph-engine.md
0b/720b63310b/: metadata.json
15/3070d2b518/: metadata.json
1b/2f7b528e3e/: metadata.json
3e/c82f26e207/: metadata.json
5f/a27393a11b/: metadata.json
67/9ebea5c204/: metadata.json
67/9ee94fa8c8/: metadata.json
79/a3adf8bf35/: metadata.json
86/26b59cf28f/: metadata.json
99/e9f590acfd/: metadata.json
9e/20eb58fd95/: metadata.json
a2/5ae378335b/: metadata.json
benchmarks/: test_optimization_prs.py
d1/b9793bdfde/: metadata.json
dev/: ARCHITECTURE-MAP.md  ARCHITECTURE.md  CODE-CONVENTIONS.md  CONTRIBUTING.md  CORE-BELIEFS.md  REVIEW-CHECKLIST.md  TESTING-GUIDE.md  VIZ-COMPATIBILITY-MATRIX.md  WIDGET-PREFERENCES.md
dev/recovered-demos/: README.md  inspect-and-start-run.html  inspect-and-start-run.ipynb  inspect_widget_failure_timeline_v4.html  inspect_widget_hex_redesign.html  start-map-failure-drilldown.html  start-map-failure-drilldown.ipynb
docs/: AGENTS.md  CLAUDE.md  README.md  SUMMARY.md  changelog.md  comparison.md  getting-started.md  philosophy.md  release.md  viz-gap-fix-session-notes.md
docs/.ruler/: README.md  code_smells.md  code_structure.md  instructions.md
docs/01-introduction/: comparison.md  quick-start.md  what-is-hypergraph.md  when-to-use.md
docs/02-core-concepts/: getting-started.md
docs/03-patterns/: 01-simple-pipeline.md  02-routing.md  03-agentic-loops.md  04-hierarchical.md  05-multi-agent.md  06-streaming.md  07-human-in-the-loop.md  08-caching.md
docs/04-real-world/: data-pipeline.md  evaluation-harness.md  framework-ports.md  multi-turn-rag.md  prompt-optimization.md  rag-pipeline.md
docs/05-how-to/: batch-processing.md  control-background-execution.md  daft-workflows.md  debug-workflows.md  declare-edges-explicitly.md  integrate-with-llms.md  manage-stateful-resources.md  nodes-from-component-methods.md  observe-execution.md  rename-and-adapt.md  retry-transient-failures.md  test-without-framework.md  visualize-graphs.md
docs/06-api-reference/: checkpointers.md  errors.md  events.md  gates.md  graph.md  inputspec.md  nodes.md  runners.md
examples/: __init__.py  background_handles_async.py  background_handles_sync.py  chat_app.py  comprehensive_test.py  debug_nested_viz.py  elaborate_test.py  generate_playground.py  inspect-mode-reference.html  inspect_mode.py  mock_slack_server.py  slack_chat.py  slack_interrupt_auto_resume_demo.py  slack_mock.py  subtext_materialization.py  test_viz_layout.ipynb  tracing-playground.html  tracing_demo.py  visualization_examples.ipynb
notebooks/: 04_cycles.ipynb  cache_observability_demo.ipynb  checkpoint_decision_matrix.ipynb  checkpoint_lineage_walkthrough.ipynb  checkpoint_use_case_recipes.ipynb  checkpointer-explorer-showcase.ipynb  dark_mode_test.ipynb  hypertable-showcase.ipynb  interrupt-loop-debug.ipynb  llm_batch.ipynb  mermaid_examples.ipynb  playground.ipynb  stop_stream_nodecontext.ipynb  test_viz_layout.ipynb  visualization_examples.ipynb
plans/: README.md
scripts/: benchmark_deep_nested.py  capture_ir_parity.py  capture_live_widget_demo.py  capture_viz.py  compare_payload_size.py  render_ir_parity.py  render_mermaid_examples.py  render_notebook_viz.py  test_api_docs.py  test_examples.py  test_graph_examples.py  test_layout.py  test_viz_renderer.py  verify_distribution.py  verify_docs.py
specs/: README.md
tests/: __init__.py  _interrupt_questions.py  test_background_handle_api.py  test_background_handle_examples.py  test_background_handle_lifecycle.py  test_background_handles.py  test_background_shared_state.py  test_bind_defaults.py  test_bind_edge_cases.py  test_cache_behavior.py  test_cache_disk.py  test_cache_edge_cases.py  test_cache_events.py  test_cache_validation.py  test_code_review_fixes.py  test_construction_matrix.py  test_daft_examples.py  test_deep_nesting_issues.py  test_derived_table.py  test_derived_table_sink.py  test_diagnostics.py  test_display_mode.py  test_docs_contract.py  test_emit_wait_for.py  test_empty_collections.py  test_error_handling_edge_cases.py  test_examples_daft.py  test_exception_propagation.py  test_explicit_edges.py  test_failure_evidence.py  test_fingerprint_binary.py  test_framework_ports.py  test_gate_activation_scheduling.py  test_gitignore_specs.py  test_graph.py  test_graph_node_execution_identity.py  test_graph_runners_boundary.py  test_graph_topologies.py  test_graph_validation.py  test_graphnode_boundary_projection.py  (+75 more)
viz-dev/: CLAUDE.md  generate_data.py  index.html  package-lock.json  package.json  vite.config.js
(+719 files in other folders)
