[project]
name = "hypergraph"
version = "0.1.0"
description = "A hierarchical and modular graph workflow framework for AI & ML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.2",
]
authors = [
    {name = "Gilad Rubin", email = "me@giladrubin.com"}
]
license = {text = "MIT"}
keywords = ["graph", "pipeline", "workflow", "ml", "ai", "dag", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
batch = [
    "pyarrow>=14.0.0",
]

daft = [
    "daft>=0.6.11",
]

viz = [
    "ipykernel>=6.31.0",
]

notebook = [
    "notebook>=7.5.0",
    "ipykernel<7",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
]

telemetry = [
    "logfire>=2.0.0",
    "tqdm>=4.67.1",
    "rich>=13.0.0",
]

all = [
    "pyarrow>=14.0.0",
    "daft>=0.6.11",
    "ipykernel<7",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "tqdm>=4.67.1",
    "rich>=13.0.0",
    "logfire>=2.0.0",
]

modal = [
    "modal>=0.64.0",
    "cloudpickle>=3.0.0",
]

examples = [
    "colbert-ai>=0.2.22",
    "daft>=0.6.7",
    "diskcache>=5.6.3",
    "ipykernel>=6.31.0",
    "model2vec>=0.7.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pydantic>=2.12.3",
    "pylate>=1.0.0",
    "pytrec-eval>=0.5",
    "rank-bm25>=0.2.2",
]
dev = []

[project.urls]
Homepage = "https://github.com/gilad-rubin/hypergraph"
Repository = "https://github.com/gilad-rubin/hypergraph"
Issues = "https://github.com/gilad-rubin/hypergraph/issues"

[dependency-groups]
dev = [
    "allpairspy>=2.5.1",
    "playwright>=1.56.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypergraph"]

[tool.hatch.build.targets.wheel.force-include]

# Exclude old/deprecated code from distribution
[tool.hatch.build]
exclude = [
    "src/hypergraph/old/",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.uv]
# Exclude old/deprecated code from uv operations

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (run with pytest -m slow)",
    "full_matrix: marks tests that run the full capability matrix (CI only)",
]
# Run tests in parallel, exclude full_matrix by default
addopts = "-n auto --dist worksteal -m 'not full_matrix'"
# Ignore old tests that may be broken or deprecated
norecursedirs = [
    "old",
    ".*",
    "build",
    "dist",
    "*.egg",
]
# Filter out third-party deprecation warnings
filterwarnings = [
    # Ignore numpy.linalg deprecation warning from daft's cloudpickle
    "ignore:The numpy.linalg.linalg has been made private:DeprecationWarning:daft.pickle.cloudpickle",
]
